Adicionando favicon, removendo coisas inutilizadas no bundle e adicionando novo layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
           {%- endif -%}
 
           {%- if site.phone -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.phone }}</a></li>
+            <li><a class="u-email" href="tel:{{ site.phone }}">{{ site.phone }}</a></li>
           {%- endif -%}
         </ul>
       </div>
@@ -29,7 +29,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
+        <p>{{- site.address | escape -}}</p>
       </div>
     </div>
 
