--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,14 +1,11 @@
 ---
-layout: default
+layout: page
 ---
 
 <div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+  <h1 class="page-heading">{{ page.list_title | default: "Postagens" }}</h1>
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
       {{ content }}
     </ul>
